# at_simulation_api

./: README.md  alembic.ini  alembic_create_revision.sh  alembic_downgrade_head.sh  alembic_upgrade_head.sh  application.py  makefile  pyproject.toml
AT_SIMULATION/: README.md  alembic_create_revision.sh  alembic_downgrade_head.sh  alembic_upgrade_head.sh  makefile  pyproject.toml
AT_SIMULATION/docker/at_simulation_local/: .env.example  docker-compose.yml
AT_SIMULATION/docker/base/: Dockerfile
AT_SIMULATION/frontend/: .dockerignore  Dockerfile  Makefile  README.md  package-lock.json  package.json
AT_SIMULATION/frontend/docker/: nginx.conf
AT_SIMULATION/frontend/src/: App.js  GLOBAL.js  index.js
AT_SIMULATION/frontend/src/components/: Layout.jsx  ModelsMenu.css  ModelsMenu.jsx  NotFound.jsx  Token.jsx
AT_SIMULATION/frontend/src/redux/: frameActor.js  store.js
AT_SIMULATION/frontend/src/utils/: CheckboxItem.jsx  CodeEditorItem.jsx  GoTypingInput.jsx  TinyFormItem.jsx
AT_SIMULATION/src/: application.py
AT_SIMULATION/src/alembic/: env.py
AT_SIMULATION/src/alembic/versions/: 1fac32417ea3_add_editor_tables.py  4feea5ff15f3_init.py  (+9 more)
AT_SIMULATION/src/client/: auth_client.py
AT_SIMULATION/src/config/: logger.py  minio.py  postgres.py  rabbitmq.py
AT_SIMULATION/src/core/: errors.py
AT_SIMULATION/src/delivery/: router.py  websocket_manager.py
AT_SIMULATION/src/providers/: function.py  processor.py  resource.py
AT_SIMULATION/src/repository/: helper.py
AT_SIMULATION/src/schema/: function.py  imports.py  model.py  resource.py  template.py  visio.py
(+370 files in other folders)
